--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl module Object::RateLimiter
 
+1.003001 2016-02-02
+
+  - Improved support for persistence; add ->export method & constructor
+    support for re-creating a previously exported (possibly for storage)
+    rate-limiter
+
 1.002001 2015-01-24
 
   - Add Role::Object::RateLimiter
